--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
+    "multer": "^1.4.3",
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
     "sequelize": "^6.6.5"
